--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "axios": "^1.6.8",
+    "child_process": "^1.0.2",
     "core-js": "^3.8.3",
+    "electron-tabs": "^1.0.4",
+    "tree-kill": "^1.2.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
